[project]
name = "walker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[classic-control,mujoco]>=1.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
]
